updated to store & display average rank
